2005-11-20  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserver.java: Add classes .SpawnObserver, and
	.CloneObserver.  Add tests .testBlockedCloneUnblockChildFirst, and
	.testBlockedCloneUnblockParentFirst.
	* TaskObserver.java: Note that Cloned and Forked will block both
	the parent and child.

	* TestLib.java: Add constants childAck, parentAck, addCloneSig,
	delCloneSig, addForkSig, delForkSig, zombieForkSig, execSig to
	AckProcess.  Use.
	
	* TestLib.java: Add exec method.

	* TaskState.java: Replace state .startRunning with class .Starting
	containing sub-states .waitingForStop and .waitingForUnblock.
	* Task.java: In notifyForked, add blocking observer to fork's
	list.  Similar for notifyCloned.
	* TestTaskForkedObserver.java: Update, also unblock the fork.
	* TestTaskClonedObserver.java: Update, also unblock the clone.

	* TaskState.java: Fix typo's, zombied -> disappeared.

	* Task.java: Refactor single constructor into separate unattached,
	attached clone, and attached main constructors.
	* Proc.java: Re-organize constructor code.  Delete
	sendNewAttachedTask.
	* LinuxTask.java: Ditto.
	* LinuxProc.java: Update.
	* LinuxHost.java: Update.  Explicitly create an attached processes
	first task.

	* LinuxHost.java: Pass the forked process's only task to Task
	.performeForked.
	* TaskObserver.java: Change .Forked.updateForked fork parameter to
	a Task.
	* TaskState.java: Update.
	* Task.java: Update.

2005-11-19  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Delete .Daemon.
	
	* TestLib.java: Delete .AttachedChild.  Add multi-thread
	constructor to .AttachedAckProcess.
	* TestProcStates.java: Use .AttachedAckProcess.
	
	* TestLib.java: Delete .DetachedChild.  Add .reap to
	DetachedAckProcess.
	* TestRefresh.java: Use DetachedAckProcess.
	* TestProcGet.java: Ditto.

	* TestLib.java: Merge .CloneDaemon into .Daemon.
	* TestProgGet.java, TestProcStates.java, TestTaskObserver.java:
	Use AckDaemonProcess.
	